demo-deploy/abashiri/runtime/k8s/overlays/gke/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abashiri
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 25
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      tolerations:
        - key: cloud.google.com/gke-spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: abashiri
          imagePullPolicy: Always
